--- a/config/database.yml
+++ b/config/database.yml
@@ -35,8 +35,8 @@ production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: strong_production
+  database: strong
   pool: 5
   username: root
-  password:
+  password: strong123
   host: localhost
